--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,22 +1,29 @@
 .content {
   min-height: 100%;
   height: auto !important;
+  display: flex;
 }
 .content p {
-  margin: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-right: 0;
 }
-.content .container {
-  margin-top: 100px;
+
+.container {
   min-height: 100%;
+  flex: 1 0 auto;
+  flex-direction: column;
 }
-.content .xbox_1 {
+
+.xbox_1 {
   position: absolute;
   left: 46.09%;
   right: 46.09%;
   top: 30%;
   bottom: 30%;
 }
-.content .linksText {
+
+.linksText {
   width: auto;
   height: 20px;
   font-family: "Roboto", sans-serif;
@@ -29,7 +36,7 @@
   flex-grow: 0;
   text-decoration: none;
 }
-.content .linksText:hover {
+.linksText:hover {
   text-decoration: green underline;
   font-weight: bold;
   color: darkgreen;
