--- a/src/components/Layout/footer/footer.module.scss
+++ b/src/components/Layout/footer/footer.module.scss
@@ -1,64 +1,70 @@
 .footer{
-
-  position: fixed;
-
-  bottom: 0;
-
   width: 100%;
-  height: 247px;
+  height: 190px;
+  position: absolute;
+  bottom: -190px;
+  background: #FFFFFF;
+  flex-shrink: 0;
+}
 
-  .leftTitle{
-    display: flex;
+.leftTitle{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0;
+  gap: 20px;
+  position: absolute;
+  left: 14.58%;
+  right: 62.5%;
+  top: 20.24%;
+  bottom: 47.77%;
+
+  .xbox_2{
+    position: absolute;
+    left: 46.09%;
+    right: 46.09%;
+    top: 30%;
+    bottom: 30%;
+  }
+}
+
+.date{
+  width: 440px;
+  height: 19px;
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 130%;
+  color: #000000;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+  text-align: left;
+}
+
+.rightTitle{
+  position: absolute;
+  left: 44.53%;
+  right: 20.57%;
+  top: 20.24%;
+  bottom: 20.24%;
+  flex-direction: row;
+  display: flex;
+
+  .footerLinksBlock{
+    width: 210px;
     flex-direction: column;
-    align-items: flex-start;
-    padding: 0;
-    gap: 20px;
-
-    position: absolute;
-    left: 14.58%;
-    right: 62.5%;
-    top: 20.24%;
-    bottom: 47.77%;
-  }
-
-  .date{
-    width: 440px;
-    height: 19px;
-    font-family: 'Roboto', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 130%;
-    color: #000000;
-    flex: none;
-    order: 1;
-    flex-grow: 0;
-    text-align: left;
-  }
-
-  .rightTitle{
-    position: absolute;
-    left: 44.53%;
-    right: 20.57%;
-    top: 20.24%;
-    bottom: 20.24%;
-    flex-direction: row;
     display: flex;
+    text-align: left;
 
-    .footerLinksBlock{
-      width: 210px;
-      flex-direction: column;
-      display: flex;
-      text-align: left;
-
-      .footerLinksBlock_1{
-        font-weight: bold;
-        font-size: 17px;
-        line-height: 130%;
-        font-family: 'Roboto', sans-serif;
-        margin-bottom: 10px;
-      }
+    .footerLinksBlock_1{
+      font-weight: bold;
+      font-size: 17px;
+      line-height: 130%;
+      font-family: 'Roboto', sans-serif;
+      margin-bottom: 10px;
     }
-
   }
+
 }
