--- a/src/components/Layout/header/header.module.css
+++ b/src/components/Layout/header/header.module.css
@@ -4,14 +4,14 @@
   position: fixed;
   width: 1920px;
   height: 100px;
-  left: 0;
   right: 0;
   top: 0;
   bottom: 0;
   background: #FFFFFF;
   z-index: 1000;
 }
-.header .searchBlock {
+
+.searchBlock {
   width: 103px;
   height: 40px;
   position: absolute;
@@ -20,14 +20,14 @@
   top: 25%;
   bottom: 30%;
 }
-.header .searchBlock .search_svg {
+.searchBlock .search_svg {
   box-sizing: border-box;
   position: absolute;
   right: 83%;
   top: 38%;
   bottom: 30%;
 }
-.header .searchBlock .searchText {
+.searchBlock .searchText {
   width: auto;
   height: 20px;
   position: absolute;
@@ -41,11 +41,12 @@
   line-height: 20px;
   color: #000000;
 }
-.header .searchBlock .searchText:hover {
+.searchBlock .searchText:hover {
   text-decoration: green underline;
   font-weight: bold;
 }
-.header .text_1 {
+
+.text_1 {
   display: flex;
   justify-content: inherit;
   position: absolute;
@@ -54,7 +55,8 @@
   top: 40%;
   bottom: 36%;
 }
-.header .text_2 {
+
+.text_2 {
   display: flex;
   justify-content: inherit;
   position: absolute;
@@ -63,21 +65,22 @@
   top: 40%;
   bottom: 40%;
 }
-.header .cartBlock {
+
+.cartBlock {
   position: absolute;
   left: 79.84%;
   right: 14.53%;
   top: 28%;
   bottom: 28%;
 }
-.header .cartBlock .cart {
+.cartBlock .cart {
   position: absolute;
   left: 24.33%;
   right: 24.33%;
   top: 17.58%;
   bottom: 17.58%;
 }
-.header .cartBlock .cartsCounter {
+.cartBlock .cartsCounter {
   position: initial;
   left: 82.45%;
   right: 14.53%;
