--- a/src/pages/HeaderPages/HomePage/HomePage.module.scss
+++ b/src/pages/HeaderPages/HomePage/HomePage.module.scss
@@ -98,27 +98,27 @@
 }
 .first_quads_block {
   @include card_block;
-  top: 700px;
+  top: 720px;
   left: 690px;
-  flex-flow: column wrap;
   display: flex;
+  flex-flow: wrap;
 }
 .second_quads_block {
   @include card_block;
-  top: 1200px;
+  top: 1220px;
   margin: 0;
-  flex-flow: column wrap;
   display: flex;
+  flex-flow: wrap;
 }
 .first_monoBlock{
   @include card_block;
-  top: 700px;
+  top: 720px;
   background: #EDEDED;
 }
 .second_monoBlock{
   @include card_block;
   left: 690px;
-  top: 1200px;
+  top: 1220px;
   background: #EDEDED;
 }
 .first_monoBlock_image{
@@ -136,11 +136,43 @@
   right: 50%;
   left: 36.3%;
 }
-.card{
+.description_text{
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 130%;
+  display: flex;
+  text-align: left;
+  margin-left: 20px;
+}
+.full_card{
+  display: inline-block;
+  justify-content: center;
+  width: 335px;
+  height: 250px;
+  font-size: 17px;
+  background-blend-mode: multiply;
+
   &:hover{
-    outline: 2px solid grey;
+    outline: 2px solid green;
     outline-offset: -2px;
   }
+}
+.full_card:nth-child(1){
+  color: white;
+  background: black;
+}
+.full_card:nth-child(2){
+  color: black;
+  background: white;
+}
+.full_card:nth-child(3){
+  color: black;
+  background: white;
+}
+.full_card:nth-child(4){
+  color: white;
+  background: black;
 }
 
 .title_text_3{
@@ -282,7 +314,7 @@ figcaption{
   @include main_text_styles;
   width: 555px;
   height: 55px;
-  left: 749px;
+  left: 812px;
   top: 48px;
   font-size: 42px;
 }
@@ -291,7 +323,7 @@ figcaption{
   display: flex;
   position: absolute;
   width: 210px;
-  top: 220px;
-  left: 765px;
+  top: 188px;
+  left: 829px;
 }
 
