--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,12 +1,10 @@
 .content{
-  min-height: 100%;
-  height: auto !important;
-  display: flex;
+  //display: flex;
 }
 .container{
-  min-height:100%;
-  flex: 1 0 auto;
-  flex-direction: column;
+  min-height: calc(100vh - 247px);
+  position: relative;
+  padding-bottom: 500px;
 }
 .xbox_1{
   position: absolute;
