--- a/src/components/Layout/footer/footer.module.css
+++ b/src/components/Layout/footer/footer.module.css
@@ -1,10 +1,11 @@
 .footer {
   width: 100%;
-  height: 190px;
-  position: absolute;
-  bottom: -190px;
+  height: 247px;
+  position: relative;
+  bottom: 0;
   background: #FFFFFF;
-  flex-shrink: 0;
+  margin-top: auto;
+  flex-grow: 1;
 }
 
 .leftTitle {
