--- a/src/pages/HeaderPages/AccessoriesPage/AccesoriesPage.module.css
+++ b/src/pages/HeaderPages/AccessoriesPage/AccesoriesPage.module.css
@@ -5,15 +5,24 @@
   top: 100px;
 }
 
-.text_controllers {
+.controllers {
+  position: absolute;
+  width: 1920px;
+  height: 375px;
+  left: 0;
+  top: 100px;
+}
+
+.title_text {
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 500;
   line-height: 130%;
   font-weight: bold;
   font-size: 42px;
-  width: 325px;
+  width: 585px;
   height: 55px;
+  letter-spacing: -1px;
 }
 
 .controllers_block {
@@ -25,7 +34,7 @@
   text-align: left;
 }
 
-.button_1 {
+.button {
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -43,7 +52,7 @@
   white-space: nowrap;
   gap: calc(5% + 5px);
 }
-.button_1:hover {
+.button:hover {
   background: #0F7C10;
   color: white;
   fill: white;
@@ -59,6 +68,30 @@
   flex-direction: row;
 }
 
+.pictures_2 {
+  position: absolute;
+  width: 1015px;
+  height: 325px;
+  left: 14.58%;
+  right: 14.58%;
+  bottom: 0;
+  display: flex;
+  flex-direction: row;
+  top: 24.2%;
+}
+
+.pictures_3 {
+  position: absolute;
+  width: 1015px;
+  height: 325px;
+  left: 14.58%;
+  right: 14.58%;
+  bottom: 0;
+  display: flex;
+  flex-direction: row;
+  top: 57.8%;
+}
+
 .pic {
   width: 325px;
   height: 325px;
@@ -72,16 +105,14 @@
 .design_lab {
   position: absolute;
   width: 1920px;
-  height: 450px;
+  height: 375px;
   left: 0;
+  top: 100px;
   top: 475px;
 }
 
 .design_block {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 0;
   gap: 20px;
   position: absolute;
   width: 553px;
@@ -90,28 +121,44 @@
   top: 50px;
 }
 
-.text_design {
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 130%;
-  font-weight: bold;
-  font-size: 42px;
-  text-align: left;
-  text-transform: capitalize;
-  letter-spacing: -1px;
+.headsets {
+  position: absolute;
+  width: 1920px;
+  height: 375px;
+  left: 0;
+  top: 100px;
+  top: 925px;
 }
 
-.pictures_2 {
+.headset_block {
   position: absolute;
-  width: 1015px;
-  height: 325px;
+  width: 325px;
+  height: 117px;
+  left: 280px;
+  top: 50px;
+  text-align: left;
+}
+
+.stands {
+  position: absolute;
+  width: 1920px;
+  height: 375px;
+  left: 0;
+  top: 100px;
+  top: 1300px;
+}
+
+.stands_block {
   display: flex;
   flex-direction: row;
-  left: 14.58%;
-  right: 14.58%;
-  top: 27.78%;
-  bottom: 0%;
+  align-items: center;
+  padding: 0;
+  gap: 20px;
+  position: absolute;
+  width: 803px;
+  height: 55px;
+  left: 280px;
+  top: 50px;
 }
 
 /*# sourceMappingURL=AccesoriesPage.module.css.map */
