--- a/src/pages/HeaderPages/AccessoriesPage/AccesoriesPage.module.css
+++ b/src/pages/HeaderPages/AccessoriesPage/AccesoriesPage.module.css
@@ -5,12 +5,21 @@
   top: 100px;
 }
 
-.controllers {
+.first_block {
   position: absolute;
-  width: 1920px;
+  width: 100%;
   height: 375px;
   left: 0;
   top: 100px;
+}
+
+.text_button_block_first {
+  position: absolute;
+  width: 325px;
+  height: 117px;
+  left: 280px;
+  top: 50px;
+  text-align: left;
 }
 
 .title_text {
@@ -23,15 +32,6 @@
   width: 585px;
   height: 55px;
   letter-spacing: -1px;
-}
-
-.controllers_block {
-  position: absolute;
-  width: 325px;
-  height: 117px;
-  left: 280px;
-  top: 50px;
-  text-align: left;
 }
 
 .button {
@@ -58,107 +58,119 @@
   fill: white;
 }
 
-.pictures_1 {
-  position: absolute;
-  width: 1015px;
-  height: 325px;
-  left: 625px;
+.pictures_first {
+  display: flex;
+  flex-flow: row;
+  position: relative;
   top: 50px;
-  display: flex;
-  flex-direction: row;
+  left: 625px;
 }
 
-.pictures_2 {
-  position: absolute;
-  width: 1015px;
-  height: 325px;
-  left: 14.58%;
-  right: 14.58%;
-  bottom: 0;
-  display: flex;
-  flex-direction: row;
-  top: 24.2%;
-}
-
-.pictures_3 {
-  position: absolute;
-  width: 1015px;
-  height: 325px;
-  left: 14.58%;
-  right: 14.58%;
-  bottom: 0;
-  display: flex;
-  flex-direction: row;
-  top: 57.8%;
-}
-
-.pic {
+.picture_style {
   width: 325px;
   height: 325px;
   margin-right: 20px;
   transition: 0.5s;
 }
-.pic:hover {
+.picture_style:hover {
   transform: scale(1.06);
 }
 
-.design_lab {
+.second_block {
   position: absolute;
-  width: 1920px;
+  width: 100%;
   height: 375px;
   left: 0;
   top: 100px;
+  height: 450px;
   top: 475px;
 }
 
-.design_block {
-  display: flex;
-  gap: 20px;
-  position: absolute;
-  width: 553px;
-  height: 55px;
-  left: 280px;
-  top: 50px;
-}
-
-.headsets {
-  position: absolute;
-  width: 1920px;
-  height: 375px;
-  left: 0;
-  top: 100px;
-  top: 925px;
-}
-
-.headset_block {
+.text_button_block_second {
   position: absolute;
   width: 325px;
   height: 117px;
   left: 280px;
   top: 50px;
   text-align: left;
-}
-
-.stands {
-  position: absolute;
-  width: 1920px;
-  height: 375px;
-  left: 0;
-  top: 100px;
-  top: 1300px;
-}
-
-.stands_block {
+  top: 0;
+  gap: 20px;
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 0;
-  gap: 20px;
+  width: 553px;
+}
+
+.pictures_second {
+  display: flex;
+  left: 14.58%;
+  position: relative;
+  top: 27.78%;
+}
+
+.third_block {
   position: absolute;
-  width: 803px;
-  height: 55px;
+  width: 100%;
+  height: 375px;
+  left: 0;
+  top: 100px;
+  top: 925px;
+}
+
+.fourth_block {
+  position: absolute;
+  width: 100%;
+  height: 375px;
+  left: 0;
+  top: 100px;
+  height: 450px;
+  top: 1300px;
+}
+
+.text_button_block_fourth {
+  position: absolute;
+  width: 325px;
+  height: 117px;
   left: 280px;
   top: 50px;
+  text-align: left;
+  top: 0;
+  gap: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 809px;
+}
+
+.last_block {
+  position: absolute;
+  width: 100%;
+  height: 375px;
+  left: 0;
+  top: 100px;
+  height: 450px;
+  top: 1750px;
+}
+
+.last_image {
+  position: absolute;
+  left: 280px;
+  top: 50px;
+}
+
+.text_button_block_last {
+  position: absolute;
+  width: 325px;
+  height: 117px;
+  left: 280px;
+  top: 50px;
+  text-align: left;
+  width: 555px;
+  position: absolute;
+  left: 56.51%;
+  right: 14.58%;
+  top: 33.11%;
+  bottom: 34.22%;
 }
 
 /*# sourceMappingURL=AccesoriesPage.module.css.map */
