--- a/src/components/buttons/Default_button/Default_button.module.css
+++ b/src/components/buttons/Default_button/Default_button.module.css
@@ -3,14 +3,14 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: flex-start;
-  padding: 10px 50px;
   gap: 10px;
   width: 140px;
   height: 42px;
-  position: absolute;
+  position: relative;
   color: white;
   cursor: pointer;
+  font-size: 17px;
+  align-items: center;
 }
 .myButton:hover {
   background: #11BC15;
@@ -18,6 +18,7 @@
 .myButton:active {
   background: white;
   border-bottom: 2px solid #11BC15;
+  color: black;
 }
 
 /*# sourceMappingURL=Default_button.module.css.map */
