--- a/src/components/buttons/Default_button/Default_button.module.scss
+++ b/src/components/buttons/Default_button/Default_button.module.scss
@@ -3,14 +3,14 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: flex-start;
-  padding: 10px 50px;
   gap: 10px;
   width: 140px;
   height: 42px;
-  position: absolute;
+  position: relative;
   color: white;
   cursor: pointer;
+  font-size: 17px;
+  align-items: center;
   &:hover {
     background: #11BC15;
   }
@@ -18,5 +18,6 @@
   &:active {
     background: white;
     border-bottom: 2px solid #11BC15;
+    color: black;
   }
 }
