--- a/src/pages/HeaderPages/HomePage/HomePage.module.css
+++ b/src/pages/HeaderPages/HomePage/HomePage.module.css
@@ -27,9 +27,9 @@
   display: flex;
   flex-direction: column;
   text-align: left;
-  position: absolute;
+  position: relative;
   width: 670px;
-  height: 237px;
+  height: 400px;
   left: 115px;
   top: 215px;
 }
@@ -105,6 +105,7 @@
   left: 50%;
   position: relative;
   top: 102px;
+  width: 298px;
 }
 
 .title_text_3 {
