--- a/src/pages/HeaderPages/HomePage/HomePage.module.scss
+++ b/src/pages/HeaderPages/HomePage/HomePage.module.scss
@@ -40,9 +40,9 @@
   display: flex;
   flex-direction: column;
   text-align: left;
-  position: absolute;
+  position: relative;
   width: 670px;
-  height: 237px;
+  height: 400px;
   left: 115px;
   top: 215px;
 }
@@ -101,6 +101,7 @@
   left: 50%;
   position: relative;
   top: 102px;
+  width: 298px;
 }
 
 .title_text_3{
