--- a/src/pages/PagesComponents/LastBlock.module.scss
+++ b/src/pages/PagesComponents/LastBlock.module.scss
@@ -32,3 +32,27 @@
   top: 149px;
   left: 135px;
 }
+
+.myButton{
+  background: #0F7C10;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 10px;
+  width: 140px;
+  height: 42px;
+  position: relative;
+  color: white;
+  cursor: pointer;
+  font-size: 17px;
+  align-items: center;
+  &:hover {
+    background: #11BC15;
+  }
+
+  &:active {
+    background: white;
+    border-bottom: 2px solid #11BC15;
+    color: black;
+  }
+}
