--- a/src/pages/HeaderPages/HomePage/HomePage.module.scss
+++ b/src/pages/HeaderPages/HomePage/HomePage.module.scss
@@ -12,14 +12,12 @@
 }
 
 .mainContainer {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 275px;
+  position: relative;
+  width: 1920px;
+  height: 3200px;
   top: 100px;
-  min-height: 100%;
   background: #F9F9F9;
-  overflow-y: auto;
+  left: 280px;
 }
 ////////////////////////////////////////
 .mainContainer_first{
