--- a/src/pages/HeaderPages/AccessoriesPage/AccesoriesPage.module.css
+++ b/src/pages/HeaderPages/AccessoriesPage/AccesoriesPage.module.css
@@ -149,4 +149,21 @@
   bottom: 34.22%;
 }
 
+.link_text_style {
+  width: auto;
+  height: 20px;
+  font-size: 17px;
+  line-height: 20px;
+  color: #000000;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  text-decoration: none;
+}
+.link_text_style:hover {
+  text-decoration: green underline;
+  font-weight: bold;
+  color: darkgreen;
+}
+
 /*# sourceMappingURL=AccesoriesPage.module.css.map */
