--- a/src/pages/HeaderPages/HomePage/HomePage.module.css
+++ b/src/pages/HeaderPages/HomePage/HomePage.module.css
@@ -349,4 +349,21 @@ figcaption {
   font-size: 20px;
 }
 
+.link_text_style {
+  width: auto;
+  height: 20px;
+  font-size: 17px;
+  line-height: 20px;
+  color: #000000;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  text-decoration: none;
+}
+.link_text_style:hover {
+  text-decoration: green underline;
+  font-weight: bold;
+  color: darkgreen;
+}
+
 /*# sourceMappingURL=HomePage.module.css.map */
