--- a/src/pages/HeaderPages/AccessoriesPage/AccesoriesPage.module.scss
+++ b/src/pages/HeaderPages/AccessoriesPage/AccesoriesPage.module.scss
@@ -135,3 +135,21 @@
   top: 33.11%;
   bottom: 34.22%;
 }
+
+.link_text_style{
+  width: auto;
+  height: 20px;
+  font-size: 17px;
+  line-height: 20px;
+  color: #000000;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  text-decoration: none;
+
+  &:hover{
+    text-decoration: green underline;
+    font-weight: bold;
+    color: darkgreen;
+  }
+}
